--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- ESTILOS EXTERNOS -->
+  <link href="assets/Dewi/css/bootstrap.min.css" rel="stylesheet"-->
+  <!-- BOOTSTRAP 
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/bootstrap-grip.min.css" rel="stylesheet">
+  <link href="assets/css/bootstrap-reboot.min.css" rel="stylesheet">-->
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/jquery.bxslider.css">
   <link rel="stylesheet" type="text/css" href="assets/css/isotope.css" media="screen" />
@@ -24,16 +28,14 @@
 
   <!-- LIBRERIAS EXTERNAS -->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <!--script src="assets/js/jquery-2.1.1.min.js"></script-->
+  <script src="assets/Dewi/js/jquery-2.1.1.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/wow.min.js"></script>
-  <script src="assets/js/fancybox/jquery.fancybox.pack.js"></script>
-  <script src="assets/js/jquery.easing.1.3.js"></script>
-  <script src="assets/js/jquery.bxslider.min.js"></script>
-  <script src="assets/js/functions.js"></script>
+  <script src="assets/Dewi/js/bootstrap.min.js"></script>
+  <script src="assets/Dewi/js/wow.min.js"></script>
+  <script src="assets/Dewi/js/fancybox/jquery.fancybox.pack.js"></script>
+  <script src="assets/Dewi/js/jquery.easing.1.3.js"></script>
+  <script src="assets/Dewi/js/jquery.bxslider.min.js"></script>
+  <script src="assets/Dewi/js/functions.js"></script>
   <script>wow = new WOW({}).init();</script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
   <!--DATEPICKER -->
