--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- ESTILOS EXTERNOS -->
-  <link href="assets/Dewi/css/bootstrap.min.css" rel="stylesheet"-->
-  <!-- BOOTSTRAP 
+  <link href="assets/Dewi/css/bootstrap.min.css" rel="stylesheet">
+  <!-- BOOTSTRAP
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/css/bootstrap-grip.min.css" rel="stylesheet">
   <link href="assets/css/bootstrap-reboot.min.css" rel="stylesheet">-->
