--- a/src/index.html
+++ b/src/index.html
@@ -76,13 +76,13 @@
      $('.your-class').slick({
         slidesToShow: 4,
        slidesToScroll: 1,
-       autoplay: true,
+       autoplay: false,
        autoplaySpeed: 2000,
      });
      $('.my-class').slick({
         slidesToShow: 2,
        slidesToScroll: 1,
-       autoplay: true,
+       autoplay: false,
        autoplaySpeed: 2000,
      });
     });
