--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
   <script src="assets/Dewi/js/jquery.easing.1.3.js"></script>
   <script src="assets/Dewi/js/jquery.bxslider.min.js"></script>
   <script src="assets/Dewi/js/functions.js"></script>
+  <script src="assets/Dewi/js/jquery.soap.js"></script>
   <script>wow = new WOW({}).init();</script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
   <!--DATEPICKER -->
