--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
   <!-- DATEPICKER -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.min.css" type="text/css"/>
   <link rel="stylesheet" href="assets/css/datepicker/date_highlight.css">
+  <!-- SLICK -->
+  <link rel="stylesheet" href="assets/slick.css" />
+  <link rel="stylesheet" href="assets/slick-theme.css" />
 </head>
 <body>
   <app-root></app-root>
